[tool.poetry]
name = "sympoly"
version = "0.1.0"
description = ""
authors = ["Ron-Ashkenazi <ron98002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
beanie = "^1.25.0"
iso4217 = "^1.11.20220401"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
